<?xml version="1.0" encoding="UTF-8"?><resources><string name="androidAppModule6string0">androidAppModule6string0</string>
<string name="androidAppModule6string1">androidAppModule6string1</string>
<string name="androidAppModule6string2">androidAppModule6string2</string>
<string name="androidAppModule6string3">androidAppModule6string3</string>
<string name="androidAppModule6string4">androidAppModule6string4</string>
<string name="androidAppModule6string5">androidAppModule6string5</string>
<string name="androidAppModule6string6">androidAppModule6string6</string>
<string name="androidAppModule6string7">androidAppModule6string7</string>
<string name="androidAppModule6string8">androidAppModule6string8</string>
<string name="androidAppModule6string9">androidAppModule6string9</string>
<string name="androidAppModule6string10">androidAppModule6string10</string>
<string name="androidAppModule6string11">androidAppModule6string11</string>
<string name="androidAppModule6string12">androidAppModule6string12</string>
<string name="androidAppModule6string13">androidAppModule6string13</string>
<string name="androidAppModule6string14">androidAppModule6string14</string>
<string name="androidAppModule6string15">androidAppModule6string15</string>
<string name="androidAppModule6string16">androidAppModule6string16</string>
<string name="androidAppModule6string17">androidAppModule6string17</string>
<string name="androidAppModule6string18">androidAppModule6string18</string>
<string name="androidAppModule6string19">androidAppModule6string19</string>
<string name="androidAppModule6string20">androidAppModule6string20</string>
<string name="androidAppModule6string21">androidAppModule6string21</string>
<string name="androidAppModule6string22">androidAppModule6string22</string>
<string name="androidAppModule6string23">androidAppModule6string23</string>
<string name="androidAppModule6string24">androidAppModule6string24</string>
<string name="androidAppModule6string25">androidAppModule6string25</string>
<string name="androidAppModule6string26">androidAppModule6string26</string>
<string name="androidAppModule6string27">androidAppModule6string27</string>
<string name="androidAppModule6string28">androidAppModule6string28</string>
<string name="androidAppModule6string29">androidAppModule6string29</string>
<string name="androidAppModule6string30">androidAppModule6string30</string>
<string name="androidAppModule6string31">androidAppModule6string31</string>
<string name="androidAppModule6string32">androidAppModule6string32</string>
<string name="androidAppModule6string33">androidAppModule6string33</string>
<string name="androidAppModule6string34">androidAppModule6string34</string>
<string name="androidAppModule6string35">androidAppModule6string35</string>
<string name="androidAppModule6string36">androidAppModule6string36</string>
<string name="androidAppModule6string37">androidAppModule6string37</string>
<string name="androidAppModule6string38">androidAppModule6string38</string>
<string name="androidAppModule6string39">androidAppModule6string39</string>
<string name="androidAppModule6string40">androidAppModule6string40</string>
<string name="androidAppModule6string41">androidAppModule6string41</string>
<string name="androidAppModule6string42">androidAppModule6string42</string>
<string name="androidAppModule6string43">androidAppModule6string43</string>
<string name="androidAppModule6string44">androidAppModule6string44</string>
<string name="androidAppModule6string45">androidAppModule6string45</string>
<string name="androidAppModule6string46">androidAppModule6string46</string>
<string name="androidAppModule6string47">androidAppModule6string47</string>
<string name="androidAppModule6string48">androidAppModule6string48</string>
<string name="androidAppModule6string49">androidAppModule6string49</string>
<string name="androidAppModule6string50">androidAppModule6string50</string>
<string name="androidAppModule6string51">androidAppModule6string51</string>
<string name="androidAppModule6string52">androidAppModule6string52</string>
<string name="androidAppModule6string53">androidAppModule6string53</string>
<string name="androidAppModule6string54">androidAppModule6string54</string>
<string name="androidAppModule6string55">androidAppModule6string55</string>
<string name="androidAppModule6string56">androidAppModule6string56</string>
<string name="androidAppModule6string57">androidAppModule6string57</string>
<string name="androidAppModule6string58">androidAppModule6string58</string>
<string name="androidAppModule6string59">androidAppModule6string59</string>
<string name="androidAppModule6string60">androidAppModule6string60</string>
<string name="androidAppModule6string61">androidAppModule6string61</string>
<string name="androidAppModule6string62">androidAppModule6string62</string>
<string name="androidAppModule6string63">androidAppModule6string63</string>
<string name="androidAppModule6string64">androidAppModule6string64</string>
<string name="androidAppModule6string65">androidAppModule6string65</string>
<string name="androidAppModule6string66">androidAppModule6string66</string>
<string name="androidAppModule6string67">androidAppModule6string67</string>
<string name="androidAppModule6string68">androidAppModule6string68</string>
<string name="androidAppModule6string69">androidAppModule6string69</string>
<string name="androidAppModule6string70">androidAppModule6string70</string>
<string name="androidAppModule6string71">androidAppModule6string71</string>
<string name="androidAppModule6string72">androidAppModule6string72</string>
<string name="androidAppModule6string73">androidAppModule6string73</string>
<string name="androidAppModule6string74">androidAppModule6string74</string>
<string name="androidAppModule6string75">androidAppModule6string75</string>
<string name="androidAppModule6string76">androidAppModule6string76</string>
<string name="androidAppModule6string77">androidAppModule6string77</string>
<string name="androidAppModule6string78">androidAppModule6string78</string>
<string name="androidAppModule6string79">androidAppModule6string79</string>
<string name="androidAppModule6string80">androidAppModule6string80</string>
<string name="androidAppModule6string81">androidAppModule6string81</string>
<string name="androidAppModule6string82">androidAppModule6string82</string>
<string name="androidAppModule6string83">androidAppModule6string83</string>
<string name="androidAppModule6string84">androidAppModule6string84</string>
<string name="androidAppModule6string85">androidAppModule6string85</string>
<string name="androidAppModule6string86">androidAppModule6string86</string>
<string name="androidAppModule6string87">androidAppModule6string87</string>
<string name="androidAppModule6string88">androidAppModule6string88</string>
<string name="androidAppModule6string89">androidAppModule6string89</string>
<string name="androidAppModule6string90">androidAppModule6string90</string>
<string name="androidAppModule6string91">androidAppModule6string91</string>
<string name="androidAppModule6string92">androidAppModule6string92</string>
<string name="androidAppModule6string93">androidAppModule6string93</string>
<string name="androidAppModule6string94">androidAppModule6string94</string>
<string name="androidAppModule6string95">androidAppModule6string95</string>
<string name="androidAppModule6string96">androidAppModule6string96</string>
<string name="androidAppModule6string97">androidAppModule6string97</string>
<string name="androidAppModule6string98">androidAppModule6string98</string>
<string name="androidAppModule6string99">androidAppModule6string99</string>
<string name="androidAppModule6string100">androidAppModule6string100</string>
<string name="androidAppModule6string101">androidAppModule6string101</string>
</resources>