<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
        android:id="@+id/androidappmodule6activity_main29androidAppModule6string290"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/androidAppModule6string29"
        
/><TextView
        android:id="@+id/androidappmodule6activity_main29androidAppModule6string301"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/androidAppModule6string30"
        
/><TextView
        android:id="@+id/androidappmodule6activity_main29androidAppModule6string312"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/androidAppModule6string31"
        
/>
            <ImageView
        android:id="@+id/androidappmodule6activity_main29androidappmodule6image290"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule6image29"
        
/>
            <ImageView
        android:id="@+id/androidappmodule6activity_main29androidappmodule6image301"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule6image30"
        
/>
            <ImageView
        android:id="@+id/androidappmodule6activity_main29androidappmodule6image312"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule6image31"
        
/>
            <ImageView
        android:id="@+id/androidappmodule6activity_main29androidappmodule6image323"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule6image32"
        
/>
            <ImageView
        android:id="@+id/androidappmodule6activity_main29androidappmodule6image334"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule6image33"
        
/>
            <ImageView
        android:id="@+id/androidappmodule6activity_main29androidappmodule6image345"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule6image34"
        
/>
            
            
        </LinearLayout>
    </ScrollView>