<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
        android:id="@+id/androidappmodule6activity_main49androidAppModule6string490"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/androidAppModule6string49"
        
/><TextView
        android:id="@+id/androidappmodule6activity_main49androidAppModule6string501"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/androidAppModule6string50"
        
/><TextView
        android:id="@+id/androidappmodule6activity_main49androidAppModule6string512"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/androidAppModule6string51"
        
/>
            <ImageView
        android:id="@+id/androidappmodule6activity_main49androidappmodule6image490"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule6image49"
        
/>
            <ImageView
        android:id="@+id/androidappmodule6activity_main49androidappmodule6image501"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule6image50"
        
/>
            <ImageView
        android:id="@+id/androidappmodule6activity_main49androidappmodule6image512"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule6image51"
        
/>
            <ImageView
        android:id="@+id/androidappmodule6activity_main49androidappmodule6image523"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule6image52"
        
/>
            <ImageView
        android:id="@+id/androidappmodule6activity_main49androidappmodule6image534"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule6image53"
        
/>
            <ImageView
        android:id="@+id/androidappmodule6activity_main49androidappmodule6image545"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule6image54"
        
/>
            
            
        </LinearLayout>
    </ScrollView>