<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
        android:id="@+id/androidappmodule6activity_main99androidAppModule6string990"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/androidAppModule6string99"
        
/><TextView
        android:id="@+id/androidappmodule6activity_main99androidAppModule6string1001"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/androidAppModule6string100"
        
/><TextView
        android:id="@+id/androidappmodule6activity_main99androidAppModule6string1012"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/androidAppModule6string101"
        
/>
            <ImageView
        android:id="@+id/androidappmodule6activity_main99androidappmodule6image990"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule6image99"
        
/>
            <ImageView
        android:id="@+id/androidappmodule6activity_main99androidappmodule6image1001"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule6image100"
        
/>
            <ImageView
        android:id="@+id/androidappmodule6activity_main99androidappmodule6image1012"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule6image101"
        
/>
            <ImageView
        android:id="@+id/androidappmodule6activity_main99androidappmodule6image1023"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule6image102"
        
/>
            <ImageView
        android:id="@+id/androidappmodule6activity_main99androidappmodule6image1034"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule6image103"
        
/>
            <ImageView
        android:id="@+id/androidappmodule6activity_main99androidappmodule6image1045"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule6image104"
        
/>
            
            
        </LinearLayout>
    </ScrollView>